--- a/approuter-unit3/package.json
+++ b/approuter-unit3/package.json
@@ -12,7 +12,9 @@
     "better-sqlite3": "^11.6.0",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/node": "^20",
